# alphafold3

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: config_template.json  configuration.md  installation.md
scripts/: install_hmmer.sh
src/alphafold3/: run_alphafold_logic.py
src/alphafold3/cli/: fetch_databases.py  health_check.py  main_cli.py  run_alphafold.py  run_alphafold_test.py
src/alphafold3/cli/tests/: health_check_test.py
src/alphafold3/config/: __init__.py  paths.py
src/alphafold3/config/tests/: test_paths.py
src/alphafold3/dependencies/: __init__.py  system_deps.py
src/alphafold3/dependencies/tests/: test_system_deps.py
